# xy-control-juce

./: .gitignore  BUILD_INSTRUCTIONS_WINDOWS.md  CMakeLists.txt  GenerateAllPresetImages.cpp  GenerateGlowImages.cpp  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  README.md  README_SHARING.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  NativeDialogs.h  NativeDialogs.mm  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  XYControlComponent.cpp  XYControlComponent.h
